tests/ui/parse_expr.stderr
error: no rules expected the token `~`
 --> tests/ui/parse_expr.rs:4:20
  |
4 |     plist!({ "a" : ~ });
  |                    ^ no rules expected this token in macro call
  |
note: while trying to match meta-variable `$e:expr`
 --> src/macros.rs
  |
  |     ($e:expr , $($tt:tt)*) => {};
  |      ^^^^^^^
